# src/controllers/campaignController.js
@@ -37,12 +37,27 @@ const create = async (req, res) => {
       videoDesc,
     } = req.body;
 
+    // const prevCampaign = await Project.findOne({
+    //   creator: req.user._id,
+    //   status: "approved",
+    // });
+
+    // if (prevCampaign) {
+    //   return ErrorHandler("You already have a live campaign", 401, req, res);
+    // }
     const prevCampaign = await Project.findOne({
       creator: req.user._id,
-      status: "approved",
     });
 
-    if (prevCampaign) {
+    if (prevCampaign.status === "pending") {
+      return ErrorHandler(
+        "You already have pending campaign, cann't create new one",
+        401,
+        req,
+        res
+      );
+    }
+    if (prevCampaign.status === "approved") {
       return ErrorHandler("You already have a live campaign", 401, req, res);
     }
 
@@ -210,6 +225,28 @@ const getAll = async (req, res) => {
     const itemPerPage = Number(req.body.itemPerPage);
     const pageNumber = Number(req.body.page);
     const skipItems = (pageNumber - 1) * itemPerPage;
+    const { sortBy } = req.body;
+    let sortOption = { createdAt: -1 };
+    if (sortBy) {
+      switch (sortBy) {
+        case "newest-oldest":
+          sortOption = { createdAt: -1 };
+          break;
+        case "oldest-newest":
+          sortOption = { createdAt: 1 };
+          break;
+        case "highest-lowest funding":
+          sortOption = { fundingGoal: -1 };
+          break;
+        case "lowest-highest funding":
+          sortOption = { fundingGoal: 1 };
+          break;
+        case "alphabetic":
+          sortOption = { title: 1 };
+          break;
+      }
+    }
+
     const statusFilter = req.body.statusFilter
       ? {
           status: req.body.statusFilter,
@@ -228,14 +265,6 @@ const getAll = async (req, res) => {
           projectCategory: req.body.categoryFilter,
         }
       : {};
-    // const pipeLine = [
-    //   {
-    //     $match: {
-    //       ...statusFilter,
-    //       ...searchFilter,
-    //     },
-    //   },
-    // ];
 
     const minMaxFilter =
       req.body.minMaxFilter && req.body.minMaxFilter.length > 0
@@ -246,6 +275,26 @@ const getAll = async (req, res) => {
             },
           }
         : {};
+
+    console.log(req.body.artist);
+    const artistFilter = req.body.artist
+      ? {
+          $or: [
+            {
+              "creator.firstName": {
+                $regex: req.body.artist,
+                $options: "i",
+              },
+            },
+            {
+              "creator.lastName": {
+                $regex: req.body.artist,
+                $options: "i",
+              },
+            },
+          ],
+        }
+      : {};
 
     const campaginsCount = await Project.countDocuments({ isActive: true });
     const campaigns = await Project.find({
@@ -264,15 +313,15 @@ const getAll = async (req, res) => {
         path: "investment",
         populate: "investor",
       })
-      .sort({ createdAt: -1 })
+      .sort(sortOption)
       .skip(skipItems)
       .limit(itemPerPage);
     Promise.all(
       campaigns.map(async (val, ind) => {
         if (val.creator) {
-          console.log(val.creator._id);
+          // console.log(val.creator._id);
         } else {
-          console.log(val);
+          // console.log(val);
         }
         const profile = await creatorProfile.findOne({
           creator: val.creator._id,
@@ -288,7 +337,7 @@ const getAll = async (req, res) => {
       })
     )
       .then((result) => {
-        console.log(result);
+        // console.log(result);
         return SuccessHandler(
           {
             message: "Campaigns fetched!",
@@ -1160,6 +1209,10 @@ const getFavCampaigns = async (req, res) => {
       ...searchFilter,
       isActive: true,
     })
+      .populate({
+        path: "creator",
+        select: "firstName lastName email profilePic",
+      })
       .sort({ createdAt: -1 })
       .skip(skipItems)
       .limit(itemPerPage);
