# src/models/Website/contactUs.js
@@ -1,32 +1,35 @@
 const mongoose = require("mongoose");
 const Schema = mongoose.Schema;
 
-const contactUsSchema = new Schema({
-  name: {
-    type: String,
-    required: true,
+const contactUsSchema = new Schema(
+  {
+    firstName: {
+      type: String,
+      required: true,
+    },
+    lastName: {
+      type: String,
+      required: true,
+    },
+    email: {
+      type: String,
+      // required: true,
+    },
+    message: {
+      type: String,
+      // required: true,
+    },
+    // phone: {
+    //   type: String,
+    //   // required: true,
+    // },
+    // subject: {
+    //   type: String,
+    //   // required: true,
+    // },
   },
-  email: {
-    type: String,
-    // required: true,
-  },
-  message: {
-    type: String,
-    // required: true,
-  },
-  phone: {
-    type: String,
-    // required: true,
-  },
-  subject: {
-    type: String,
-    // required: true,
-  },
-  createdAt: {
-    type: Date,
-    default: Date.now(),
-  },
-});
+  { timestamps: true }
+);
 
 const ContactUs = mongoose.model("ContactUs", contactUsSchema);
 module.exports = ContactUs;
